# toybox

./: .env.example  .gitignore  .mise.toml  ARCHITECTURE.md  CODEX.md  INTEGRATIONS.md  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini
apps/api/: README.md  pyproject.toml
apps/api/src/toybox_api/: __init__.py  config.py  db.py  main.py  observability.py
apps/api/src/toybox_api/controllers/: __init__.py  auth.py  feed.py  health.py  odds.py  profile.py  toys.py
apps/api/src/toybox_api/models/: __init__.py  auth.py  feed.py  odds.py  profile.py  toys.py
apps/api/src/toybox_api/repositories/: auth.py  feed.py  odds.py  profile.py  toys.py
apps/api/src/toybox_api/services/: __init__.py  auth.py  authentication.py  email.py  feed.py  health.py  jwt.py  odds.py  profile.py  toys.py
apps/api/tests/: conftest.py  test_auth.py  test_feed.py  test_health.py  test_observability.py  test_odds.py  test_profile.py  test_toys.py
apps/migrations/: README.md  alembic.ini  pyproject.toml
apps/migrations/migrations/: README.md  env.py  script.py.mako
apps/migrations/migrations/versions/: 20260607_0001_create_users_and_toys.py  20260607_0002_legacy_baseline.py  20260607_0003_create_toy_upload_table.py  20260608_0004_add_tries_to_toy.py  20260610_0005_add_avatar_path_to_users.py  20260610_0006_merge_toys_into_toy.py  20260610_0007_make_user_avatar_nullable.py  20260611_0008_rename_avatar_path_to_avatar_url.py  20260612_0009_add_attempt_fields_to_toy.py
apps/migrations/src/toybox_migrations/: __init__.py  config.py
(+97 files in other folders)
