[project]
name = "toybox-migrations"
version = "0.1.0"
description = "Standalone Alembic migrations for the Toybox database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0"
]

[dependency-groups]
dev = [
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
